--- a/templates/about.html
+++ b/templates/about.html
@@ -8,13 +8,13 @@ Sasaki's Profile
 <div class="profile">
     <div class="data">
         <div class="text">
-            <h2>陳奕亨</h2><br>
+            <h3>笹木いおり</h3><br>
             &nbsp;&nbsp;&nbsp;&nbsp;2002-10-26<br>
             &nbsp;&nbsp;&nbsp;&nbsp;0975117860<br>
             &nbsp;&nbsp;&nbsp;&nbsp;kanonagi1026@gmail.com<br>
         </div>
         <div class="icon">
-            <img src="/static/images/kokomi.jpg">
+            <img src="/static/images/me.jpg">
         </div>
     </div>
     <hr>
