--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
                     <i class="fa-solid fa-align-justify"></i>
                 </button>
                 <!-- icon -->
-                <div style="text-align: center;"><img id="saintess" src="/static/images/saintess.jpg"></div>
+                <div id="image"><img id="saintess" src="/static/images/saintess.png"></div>
                 <ul class="list-unstyled">
 
                     <p>Sasaki's <br> World</p>
