--- a/templates/others.html
+++ b/templates/others.html
@@ -6,7 +6,7 @@ Others
 
 {% block message %}
 <div style="width: 100% ; text-align: center; margin-top: 2%;">
-    <h1>其他連結</h1>
+    <h1 id="title">其他連結</h1>
 </div>
 <div class="link-page-container">
     <div class="mylink">
