--- a/templates/about.html
+++ b/templates/about.html
@@ -9,9 +9,16 @@ Sasaki's Profile
     <div class="data">
         <div class="text">
             <h3>笹木いおり</h3><br>
-            &nbsp;&nbsp;&nbsp;&nbsp;2002-10-26<br>
-            &nbsp;&nbsp;&nbsp;&nbsp;0975117860<br>
-            &nbsp;&nbsp;&nbsp;&nbsp;kanonagi1026@gmail.com<br>
+            生日：2002/10/26<br>
+            年齡：20<br>
+            高雄人，現在在桃園讀學店中央大學<br>
+            maimaiR值13860，未來希望拚個櫻雪華煌將<br>
+            常駐大釣哥，偶爾會跑去白喵<br>
+            卡名SK!sCOOL歡迎認親<br>
+            本命是隔壁的天使裡的椎名真晝，超級拒同擔謝謝<br>
+            會簡單的C++、JAVA、python、HTML、CSS，但算法超爛= =<br>
+            目前自學日文中，目標希望明年N2<br>
+            也希望自己未來能潤去日本<br>
         </div>
         <div class="icon">
             <img src="/static/images/me.jpg">
@@ -23,12 +30,12 @@ Sasaki's Profile
             <h4>簡歷</h4><br>
             &nbsp;&nbsp;&nbsp;&nbsp;高雄中學科學班<br>
             &nbsp;&nbsp;&nbsp;&nbsp;中央大學資訊工程學系<br><br>
-            <h4>目前學習方向</h4><br>
+            <h4>專長（？  明明就很爛</h4><br>
             &nbsp;&nbsp;&nbsp;&nbsp;1.資安<br>
             &nbsp;&nbsp;&nbsp;&nbsp;2.Web前後端<br>
         </div>
         <div class="rightsummary">
-            <h4>遊戲坑單</h4><br>
+            <h4>遊戲坑ID</h4><br>
             &nbsp;&nbsp;&nbsp;&nbsp;原神 UID:901457551<br>
             &nbsp;&nbsp;&nbsp;&nbsp;maimai UID:8021033551329<br>
             &nbsp;&nbsp;&nbsp;&nbsp;LOL ID:提瓦特老婆收藏家<br>
