--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="icon" href="/static/images/PaimonFK.ico" type="image/x-icon"/>
+    <meta property="og:image" content="https://pic.pimg.tw/tonglinv/1625637239-3059801002-g.jpg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
     <!-- css連結 -->
