--- a/templates/others.html
+++ b/templates/others.html
@@ -13,7 +13,10 @@ Others
         <h2 style="font-style:italic">Contact</h2>
         <ul style="margin-top:5% ; text-align: left; font-size: 30px;">
             <li>
-                <a href="https://www.facebook.com/profile.php?id=100026347455676" target="_blank"><i class="fa-brands fa-facebook"></i>Facebook</a>
+                <a href="https://www.facebook.com/profile.php?id=100026347455676" target="_blank"><i class="fa-brands fa-facebook"></i>Facebook(公事帳)</a>
+            </li>
+            <li>
+                <a href="https://www.facebook.com/profile.php?id=100043543188823" target="_blank"><i class="fa-brands fa-facebook"></i>Facebook(網帳)</a>
             </li>
             <li>
                 <a href="https://www.instagram.com/sasaki_1026/" target="_blank"><i class="fa-brands fa-instagram"></i>Instagram</a>
@@ -33,9 +36,8 @@ Others
                 <a href="https://twitter.com/TEIGI_3" target="_blank">和武はざの</a>
             </li>
             <li>
-                <a href="https://twitter.com/Sesield" target="_blank">sesield</a>
+                <a href="https://twitter.com/hanekoto2424" target="_blank">はねこと</a>
             </li>
-
         </ul>
     </div>
 </div>
