首頁comment大小修正

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -159,6 +159,9 @@ ul ul li a{
 }
 
 @media (max-width:600px) {
+    #comment{
+        font-size: 12px;
+    }
     #saintess{
         width: 80px;
     }
