--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@ Sasaki's Website!!
         <img src="/static/images/lemon.png">
     </div>
 </div>
-<div style="text-align:center">
+<div id="comment" style="text-align:center">
     安安，歡迎來到笹木いおり的個人網站<br>
     歡迎戳友，基本上ACGN圈或音遊圈有放自介在個版都會過<br>
     這網站有任何問題也拜託各位跟我說ㄌQwQ<br>
