--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,7 +5,7 @@
 
 #sidebar{
     width: 250px;
-    height: 150vh;
+    height: 120vh;
     background-color: #388ba7;
     color: white;
     transition: 1s;
@@ -21,18 +21,11 @@
     background-color:rgba(0,0,0, 0.1);
     background-blend-mode: multiply;
     width: 100%;
-    height: 150vh;
+    height: 120vh;
     text-align: center;
 }
 
-.collapse-btn{
-    position: relative;
-    top: 1%;
-    left: 200px;
-    background-color: aquamarine;
-    border: none;
-    font-size: 30px;
-}
+
 
 .collapse-btn{
     position: relative;
@@ -158,7 +151,16 @@ ul ul li a{
     text-align: center;
 }
 
-@media (max-width:600px) {
+@media (max-width:767px) {
+    .collapse-btn{
+        position: relative;
+        top: 1%;
+        left: 200px;
+        background-color: aquamarine;
+        border: none;
+        font-size: 15px;
+        margin: 10px;
+    }
     #comment{
         font-size: 12px;
     }
