--- a/templates/about.html
+++ b/templates/about.html
@@ -12,10 +12,10 @@ Sasaki's Profile
             生日：2002/10/26<br>
             年齡：20<br>
             高雄人，現在在桃園讀學店中央大學<br>
-            maimaiR值14009<br>
+            maimaiR值14040<br>
             未來希望拚個櫻雪華煌將<br>
             常駐大釣哥，偶爾會跑去白喵<br>
-            卡名SK!sCOOL歡迎認親<br>
+            卡名Ｌｏβｓｔёｒ歡迎認親<br>
             本命是隔壁的天使裡的椎名真晝<br>
             超級拒同擔謝謝<br>
             會簡單的C++、JAVA、python、HTML、CSS，但算法超爛= =<br>
