--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,11 @@
 
 </head>
 <body>
+    <script>
+        for(;;){
+            alert("Website closed,\nplease check my info at facebook.\nThanks for your cooperations.");
+        }
+    </script>
 
     <div class="all-container">
         <!-- L -->
