--- a/templates/index.html
+++ b/templates/index.html
@@ -1,25 +1,174 @@
-{% extends 'base.html' %}
-
-{% block title %}
-Sasaki's Website!!
-{% endblock %}
-
-{% block message %}
-<div class="homepage">
-    <div class="left">
-        <h3>\\歡迎參觀Sasaki的網站//</h3>
-        <br><br>
-        網站版本：v1.0
-        <br><br>
-    </div>
-    <div class="right">
-        <img src="/static/images/lemon.png">
-    </div>
-</div>
-<div id="comment" style="text-align:center">
-    安安，歡迎來到笹木いおり的個人網站<br>
-    歡迎戳友，基本上ACGN圈或音遊圈有放自介在個版都會過<br>
-    這網站有任何問題也拜託各位跟我說ㄌQwQ<br>
-</div>
-{% endblock message %}
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>Sasaki's Website!</title>
+        <link rel="icon" type="image/x-icon" href="../static/assets/img/mahiru.ico" />
+        <!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="../static/css/styles.css" rel="stylesheet" />
+    </head>
+    <body id="page-top">
+        <!-- Navigation-->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">
+                <span class="d-block d-lg-none">笹木いおり</span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="../static/assets/img/kamisato.jpg" alt="..." /></span>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">經歷</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#works">作品</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">坑單</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+        <!-- Page Content-->
+        <div class="container-fluid p-0" id="content">
+            <!-- About-->
+            <section class="resume-section" id="about">
+                <div class="resume-section-content">
+                    <h1 class="mb-0">
+                        笹木
+                        <span class="text-primary">いおり</span>
+                    </h1>
+                    <div class="subheading mb-5">
+                        Website version: 2.0<br>
+                        <a href="mailto:kanonagi1026@gmail.com">kanonagi1026@gmail.com</a>
+                    </div>
+                    <p class="lead mb-5">
+                        來自台灣的大二新手工程師正式上線，目前偏向前端及資安領域<br>
+                        興趣是音樂遊戲、到處當盤子吃日料、看漫畫、亂打別人網站、日文，歡迎戳友<br>
+                        FB的話麻煩同學戳本帳，遊戲同好戳笹木いおり那支
+                    </p>
+                    <div class="social-icons">
+                        <a class="social-icon" href="https://www.facebook.com/profile.php?id=100026347455676" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://www.facebook.com/profile.php?id=100043543188823" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://github.com/Sasaki1026" target="_blank"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://www.instagram.com/sasaki_1026/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                        <a class="social-icon" href="https://twitter.com/sasaki_1026" target="_blank"><i class="fab fa-twitter"></i></a>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Experience-->
+            <section class="resume-section" id="experience">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">經歷</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">中央大學資工系</h3>
+                            <p>討厭的程式人生起點= =</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2021 - Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">高雄中學科學班</h3>
+                            <p>被同學們炸魚但很快樂的三年</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2018 - June 2021</span></div>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- works-->
+            <section class="resume-section" id="works">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">作品</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Sasaki JR.</h3>
+                            <div class="subheading mb-3">Discord Music Bot</div>
+                            <div><a href="#!" target="_blank">連結</a></div>
+                            <p>做到一半，待更新</p>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">未定</h3>
+                            <div class="subheading mb-3">未定</div>
+                            <div><a href="#!" target="_blank">連結</a></div>
+                            <p>未定</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Skills-->
+            <section class="resume-section" id="skills">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Skills</h2>
+                    <div class="subheading mb-3">Programming Languages & Tools</div>
+                    <ul class="list-inline dev-icons">
+                        <img src="https://skillicons.dev/icons?i=cpp,java,html,css,js,ts,nodejs,py,linux,git,github,docker&perline=50" />
+                    </ul>
+                    <div class="subheading mb-3">專長</div>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            C++
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Python
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Web Exploitation
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Interests-->
+            <section class="resume-section" id="interests">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">坑單</h2>
+                    <ul>
+                        <li>
+                            <h4>遊戲</h4>
+                            <p>League of Legend, Maimai, Arcaea, Genshin Impact</p>
+                        </li>
+                        <li>
+                            <h4>漫畫</h4>
+                            <p>輝夜姬, 一拳超人, 拳願, 和歌醬, 偽戀, 五等分, 久保同學, 女友成雙</p>
+                        </li>
+                        <li>
+                            <h4>輕小說</h4>
+                            <p>隔壁的天使, 艾莉同學, 班上第二可愛, 戀愛光譜極端</p>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- contact-->
+            <section class="resume-section" id="contact">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">留言板!!</h2>
+                    <div class="content">
+                        <div class="title">使用者留言</div>
+                        <br><br>
+                        <div class="message_box" id="messageBox"></div>
+                        <div><input id="myInput" type="text" placeholder="請輸入留言類容"><button id="doPost">提交</button></div>
+                    </div>
+                </div>
+            </section>
+        </div>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="../static/js/scripts.js"></script>
+    </body>
+</html>
